--- a/public/plugins/frontend/css/pages/auth.css
+++ b/public/plugins/frontend/css/pages/auth.css
@@ -87,3 +87,11 @@
     background-color: #0056b3;
     border-color: #0056b3;
 }
+.new-log {
+    margin-top: 20px;
+    font-size: 14px;
+}
+.new-reg {
+    margin-top: 20px;
+    font-size: 14px;
+}
