--- a/public/plugins/backend/css/App.css
+++ b/public/plugins/backend/css/App.css
@@ -1,7 +1,21 @@
 :root {
-    --pr14dm: rgb(143, 0, 119);
+    --pr14dm: rgb(187, 0, 156);
     --sC04dm: rgb(204, 0, 44);
-    --b9: rgb(197, 197, 197);
+    --b9: rgb(236, 236, 236);
+    --cLFn7: rgb(19, 0, 65);
+    --cLFn72: rgb(255, 255, 255);
+    --b0rmO7: .5rem
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style-type: none;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 .l3odY {
