--- a/public/plugins/backend/css/components/Sidebar.css
+++ b/public/plugins/backend/css/components/Sidebar.css
@@ -1,21 +1,25 @@
 .s1d3baR_ {
+    /* position: fixed; */
     min-width: 21%;
     max-width: 21%;
-    background-color: var(--b9);
-    min-height: 100vh;
+    background: linear-gradient(180deg, rgb(255, 255, 255) 8%, var(--b9) 30%);
+    min-height: 100dvh;
 }
 
+/* Sidebar Logo Session */
 .s1d3baR_ .s1d3LO {
+    margin: 0 1rem;
     padding: 1rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom: .5px solid rgba(19, 0, 65, .2);
 }
 
 .s1d3baR_ .s1d3LO .s1d3LOim9 {
     display: flex;
     align-items: center;
-    width: 3rem;
+    width: 2.5rem;
     height: 100%;
 }
 
@@ -27,5 +31,128 @@
 
 .s1d3baR_ .s1d3LO h2 {
     margin: 0 0 0 .5rem;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: var(--cLFn7);
+}
+
+/* Sidebar Link Session */
+.s1d3L1st,
+.s1d3ex_ .s1d3exL1 {
+    padding: 1.5rem 1rem;
+}
+
+.s1d3L1st li {
+    border-radius: var(--b0rmO7);
+    overflow: hidden;
+}
+
+.s1d3L1st li a {
+    padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
+    font-size: .9rem;
+    font-weight: 500;
+    color: var(--cLFn7);
+    border-radius: var(--b0rmO7);
+    transition: all .5s ease-in-out;
+}
+
+.s1d3L1st li a:hover {
+    padding-left: 1.5rem;
+    text-decoration: none;
+    color: var(--pr14dm);
+}
+
+.s1d3L1st li a:hover>i {
+    background-color: var(--pr14dm);
+    color: var(--cLFn72);
+}
+
+.s1d3L1st li a i {
+    margin: 0 .5rem 0 0;
+    padding: .5rem .8rem;
+    font-size: .8rem;
+    color: var(--cLFn7);
+    background-color: var(--cLFn72);
+    border-radius: var(--b0rmO7);
+    box-shadow: 0 3px 11px -5px black;
+    transition: all .5s ease-in-out;
+}
+
+/* Link Active Session */
+.s1d3L1st .active,
+.s1d3ex_ .s1d3exL1 .active {
+    margin: .5rem 0;
+    border-radius: var(--b0rmO7);
+    box-shadow: 0 3px 11px -7px black;
+    overflow: hidden;
+}
+
+.s1d3L1st .active a,
+.s1d3ex_ .s1d3exL1 .active a {
+    padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
+    background-color: var(--cLFn72);
+    color: var(--cLFn7);
+    border-radius: var(--b0rmO7);
+}
+
+.s1d3L1st .active a i,
+.s1d3ex_ .s1d3exL1 .active a i {
+    margin: 0 .5rem 0 0;
+    padding: .5rem .8rem;
+    font-size: .8rem;
+    color: var(--cLFn72);
+    background-color: var(--pr14dm);
+    border-radius: var(--b0rmO7);
+    box-shadow: none;
+}
+
+/* Sidebar Account Pages Session */
+.s1d3ex_ h3 {
+    margin: 0;
+    padding: 0 2rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--cLFn7);
+}
+
+.s1d3ex_ .s1d3exL1 li {
+    border-radius: var(--b0rmO7);
+    overflow: hidden;
+}
+
+.s1d3ex_ .s1d3exL1 li a {
+    padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
+    font-size: .9rem;
+    font-weight: 500;
+    color: var(--cLFn7);
+    border-radius: var(--b0rmO7);
+    transition: all .5s ease-in-out;
+}
+
+.s1d3ex_ .s1d3exL1 li a:hover {
+    padding-left: 1.5rem;
+    text-decoration: none;
+    color: var(--pr14dm);
+}
+
+.s1d3ex_ .s1d3exL1 li a:hover>i {
+    background-color: var(--pr14dm);
+    color: var(--cLFn72);
+}
+
+.s1d3ex_ .s1d3exL1 li a i {
+    margin: 0 .5rem 0 0;
+    padding: .5rem .8rem;
+    font-size: .8rem;
+    color: var(--cLFn7);
+    background-color: var(--cLFn72);
+    border-radius: var(--b0rmO7);
+    box-shadow: 0 3px 7px -5px black;
+    transition: all .5s ease-in-out;
 }
